Update to SB 3.1.1