@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.1.1</version>
         <relativePath/>
     </parent>
 
@@ -27,23 +27,23 @@
 
         <!-- Maven plug-in versions -->
         <jaxb2-maven-plugin.version>3.0.0</jaxb2-maven-plugin.version>
-        <spotbugs-maven-plugin.version>4.7.3.4</spotbugs-maven-plugin.version>
+        <spotbugs-maven-plugin.version>4.7.3.5</spotbugs-maven-plugin.version>
 
         <!-- Third party dependencies' versions -->
         <activation.version>2.0.1</activation.version>
         <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
         <jaxb-core.version>4.0.1</jaxb-core.version>
         <jaxb-impl.version>4.0.1</jaxb-impl.version>
-        <picocli-version>4.7.2</picocli-version>
+        <picocli-version>4.7.4</picocli-version>
 
         <spring-boot-maven-plugin.finalName>jspeccy</spring-boot-maven-plugin.finalName>
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
-        <maven-project-info-reports-plugin.version>3.4.1</maven-project-info-reports-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
         <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
-        <dependency-check-maven.version>7.4.0</dependency-check-maven.version>
-        <native-maven-plugin.version>0.9.20</native-maven-plugin.version>
+        <dependency-check-maven.version>8.3.1</dependency-check-maven.version>
+        <native-maven-plugin.version>0.9.23</native-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -160,19 +160,19 @@
         </plugins>
         <pluginManagement>
             <plugins>
-                <plugin>
+                <!--plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
-                    <configuration>
+                    <configuration-->
                         <!-- The following import is required to bring in the @Contended annotation into the default -->
                         <!-- module so that we can use it to prevent false memory sharing                            -->
-                        <compilerArgs>
-                            <arg>--add-exports</arg>
+                        <!--compilerArgs>
+                            <arg>add-exports</arg>
                             <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
-                </plugin>
+                </plugin -->
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
